# llmops

./: .env.example  .gitignore  README.md  pyproject.toml
code_alongs/03_llm_intro/: llm_intro.ipynb
code_alongs/04_pydanticai_structured_output/: education.json  mlops_raw.txt  similated_employees.csv
code_alongs/04_pydantical_structured_output/: exercise.ipynb  nackademin_support.txt  pydantical_pydantic_models.ipynb  simulated_employees.md
code_alongs/06_pydanticai_fastapi_chatbot/: api.py  chat_agent.py  chat_eda.ipynb  constants.py  data_models.py  frontend.py
code_alongs/07_mlflow_llm_judge/: cleaned_data.json  constants.py  customer_service_emails.json  data_cleaning.ipynb  email_extractor.ipynb  mlflow.db  prompt_creation.ipynb
code_alongs/09_lancedb/: constants.py  jokes.json  lancedb_basics.ipynb
code_alongs/09_lancedb/knowledge_base/animals_text.lance/_transactions/: 0-70442265-b5d8-4d6d-8b9e-d2898c00817a.txn  1-b56da00f-0e05-4560-82d3-a2320a394b82.txn
code_alongs/09_lancedb/knowledge_base/articles.lance/_transactions/: 0-c6200fb3-8fb9-46eb-8a1b-94ae586d7332.txn
code_alongs/09_lancedb/knowledge_base/jokes.lance/_transactions/: 0-a8001afb-a8eb-45cf-8e31-f957861ba7b8.txn  1-adf51876-e621-4926-a08e-daff73f21fe4.txn
