[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "mlflow>=3.11",
    "pandas<3",
    "pydantic-ai>=1.77.0",
    "pydantic-ai-slim[openai]>=1.77.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
